--- a/index.html
+++ b/index.html
@@ -42,19 +42,29 @@
       <address class="address">
         <ul class="adr-list list">
           <li class="adr-item">
-            <a class="contact-link contact-link  link" href="mailto:info@devstudio.com">SiteAnalizator@gmail.com</a>
+            <a class="contact-link contact-link  link"
+              href="mailto:siteanalizator@gmail.com">SiteAnalizator@gmail.com</a>
           </li>
           <li class="adr-item">
-            <a class="contact-link link" href="tel:+110001111111">+38 096 009-78-74</a>
+            <a class="contact-link link" href="tel:+380960097874">+38 096 009-78-74</a>
           </li>
         </ul>
       </address>
     </div>
   </header>
 
-  <div class="container">
-    <h1>Визначення способу розробки сайту</h1>
-    <p>Введіть посилання на подібний сайт:</p>
+  <div class="container analyze-cointainer">
+    <h1 class="title-1">Визначення способу розробки сайту</h1>
+    <p class="subtitle subtitle-desc">Дуже часто вибір інструментів для розробки візуальної та функціональної частин
+      сайту може
+      зайняти досить багато часу.
+      Однак є рішення! <br> Пошук ключових термінів у коді, що завантажується під час відкривання сторінки дає
+      можливість
+      оцінити, який із підходів
+      потрібно використати. Скрипт, який проаналізує сайт, на який ти рівняєшся та дасть тобі рекомендацію як краще
+      реалізувати твої задуми.
+    </p>
+    <p class="subtitle-1">Введіть посилання на подібний сайт:</p>
     <textarea id="inputText" rows="3" placeholder="https://example.com"></textarea>
     <button onclick="analyze()">Аналізувати</button>
     <div id="result" class="result-box"></div>
@@ -131,21 +141,21 @@
     </button>
     <ul class="mobile-menu list">
       <li class="mobile-menu-item">
-        <a class="mobile-menu-link link active" href="./index.html">Studio</a>
+        <a class="mobile-menu-link link active" href="./index.html">Головна</a>
       </li>
       <li class="mobile-menu-item">
-        <a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a>
+        <a class="mobile-menu-link link" href="./second_page.html">Аналіз за текстом</a>
       </li>
       <li class="mobile-menu-item">
-        <a class="mobile-menu-link link" href="">Contacts</a>
+        <a class="mobile-menu-link link" href="./about_us.html">Про нас</a>
       </li>
     </ul>
     <ul class="mobile-contacts list">
       <li class="mobile-contacts-item">
-        <a class="phone-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <a class="phone-contact-link link" href="tel:+380960097874">+38 096 009-78-74</a>
       </li>
       <li class="mobile-contacts-item">
-        <a class="mail-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="mail-contact-link link" href="mailto:siteanalizator@gmail.com">SiteAnalizator@gmail.com</a>
       </li>
     </ul>
     <ul class="mobile-social list">
