--- a/about_us.html
+++ b/about_us.html
@@ -23,6 +23,11 @@
             <nav class="page-nav">
                 <a class="web-studio-link link" href="./index.html">Аналізатор<span
                         class="logo-span-header">Сайтів</span></a>
+                <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="burger-btn" width="32" height="22">
+                        <use href="./images/icons.svg#burger-icon"></use>
+                    </svg>
+                </button>
                 <ul class="header-nav-list list">
                     <li class="nav-item">
                         <a class="nav-link link" href="./index.html">Головна</a>
@@ -39,10 +44,10 @@
                 <ul class="adr-list list">
                     <li class="adr-item">
                         <a class="contact-link contact-link  link"
-                            href="mailto:info@devstudio.com">SiteAnalizator@gmail.com</a>
+                            href="mailto:siteanalizator@gmail.com.com">SiteAnalizator@gmail.com</a>
                     </li>
                     <li class="adr-item">
-                        <a class="contact-link link" href="tel:+110001111111">+38 096 009-78-74</a>
+                        <a class="contact-link link" href="tel:+380960097874">+38 096 009-78-74</a>
                     </li>
                 </ul>
             </address>
@@ -198,18 +203,18 @@
             </button>
             <ul class="mobile-menu list">
                 <li class="mobile-menu-item">
-                    <a class="mobile-menu-link link active" href="./index.html">Studio</a>
+                    <a class="mobile-menu-link link active" href="./index.html">Головна</a>
                 </li>
                 <li class="mobile-menu-item">
-                    <a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a>
+                    <a class="mobile-menu-link link" href="./portfolio.html">Аналіз за текстом</a>
                 </li>
                 <li class="mobile-menu-item">
-                    <a class="mobile-menu-link link" href="">Contacts</a>
+                    <a class="mobile-menu-link link" href="">Про нас</a>
                 </li>
             </ul>
             <ul class="mobile-contacts list">
                 <li class="mobile-contacts-item">
-                    <a class="phone-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="phone-contact-link link" href="tel:+380960097874">+38 096 009-78-74</a>
                 </li>
                 <li class="mobile-contacts-item">
                     <a class="mail-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
