--- a/second_page.html
+++ b/second_page.html
@@ -22,6 +22,11 @@
             <nav class="page-nav">
                 <a class="web-studio-link link" href="./index.html">Аналізатор<span
                         class="logo-span-header">Сайтів</span></a>
+                <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="burger-btn" width="32" height="22">
+                        <use href="./images/icons.svg#burger-icon"></use>
+                    </svg>
+                </button>
                 <ul class="header-nav-list list">
                     <li class="nav-item">
                         <a class="nav-link link " href="./index.html">Головна</a>
@@ -41,7 +46,7 @@
                             href="mailto:info@devstudio.com">SiteAnalizator@gmail.com</a>
                     </li>
                     <li class="adr-item">
-                        <a class="contact-link link" href="tel:+110001111111">+38 096 009-78-74</a>
+                        <a class="contact-link link" href="tel:+380960097874">+38 096 009-78-74</a>
                     </li>
                 </ul>
             </address>
@@ -49,7 +54,17 @@
     </header>
 
     <div class="container">
-        <h1>📝 Аналіз опису/тексту</h1>
+        <h1 class="title-1">📝 Аналіз опису/тексту</h1>
+        <p class="subtitle subtitle-desc">Дуже часто вибір інструментів для розробки візуальної та функціональної частин
+            сайту може
+            зайняти досить багато часу.
+            Однак є рішення! <br> Пошук ключових термінів у коді, що завантажується під час відкривання
+            сторінки дає
+            можливість
+            оцінити, який із підходів
+            потрібно використати. Скрипт, який проаналізує сайт, на який ти рівняєшся та дасть тобі рекомендацію як
+            краще
+            реалізувати твої задуми.</p>
         <textarea id="textInput" rows="4" placeholder="Введіть опис сайту або функціоналу..."></textarea>
         <button onclick="analyzeText()">Аналізувати текст</button>
         <div class="result-box" id="textResult"></div>
@@ -127,21 +142,21 @@
         </button>
         <ul class="mobile-menu list">
             <li class="mobile-menu-item">
-                <a class="mobile-menu-link link active" href="./index.html">Studio</a>
+                <a class="mobile-menu-link link active" href="./index.html">Головна</a>
             </li>
             <li class="mobile-menu-item">
-                <a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a>
+                <a class="mobile-menu-link link" href="./portfolio.html">Аналіз за текстом</a>
             </li>
             <li class="mobile-menu-item">
-                <a class="mobile-menu-link link" href="">Contacts</a>
+                <a class="mobile-menu-link link" href="">Про нас</a>
             </li>
         </ul>
         <ul class="mobile-contacts list">
             <li class="mobile-contacts-item">
-                <a class="phone-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="phone-contact-link link" href="tel:+380960097874">+38 096 009-78-74</a>
             </li>
             <li class="mobile-contacts-item">
-                <a class="mail-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="mail-contact-link link" href="mailto:siteanalizator@gmail.com">SiteAnalizator@gmail.com</a>
             </li>
         </ul>
         <ul class="mobile-social list">
