--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </header>
 
   <div class="container analyze-cointainer">
-    <h1 class="title-1">Визначення способу розробки сайту</h1>
+    <h1 class="title-1">Визначення інструментів розробки сайту на основі посилання на подібний сайт</h1>
     <p class="subtitle subtitle-desc">Дуже часто вибір інструментів для розробки візуальної та функціональної частин
       сайту може
       зайняти досить багато часу.
