--- a/second_page.html
+++ b/second_page.html
@@ -53,17 +53,16 @@
         </div>
     </header>
 
-    <div class="container">
-        <h1 class="title-1">📝 Аналіз опису/тексту</h1>
+    <div class="container analyze-cointainer">
+        <h1 class="title-1"> Аналіз за описом характеристик майбутнього сайту</h1>
         <p class="subtitle subtitle-desc">Дуже часто вибір інструментів для розробки візуальної та функціональної частин
             сайту може
             зайняти досить багато часу.
-            Однак є рішення! <br> Пошук ключових термінів у коді, що завантажується під час відкривання
-            сторінки дає
-            можливість
-            оцінити, який із підходів
-            потрібно використати. Скрипт, який проаналізує сайт, на який ти рівняєшся та дасть тобі рекомендацію як
-            краще
+            Однак є рішення! <br> Просто напиши, що ти хочеш бачити на своїй сторінці та дай її певні характеристики,
+            програма проаналізує отриманий текст і видасть певний результат. Ключові слова будуть головним орієнтиром
+            для скрипту, але рекомендація відбувається не за одним словом, а за більшою кількістю із однієї із
+            категорій. Аналіз опису сторінки, яку ти уявляєш в майбутньому, у висновку дасть одну технологію, якою буде
+            легше та найкраще
             реалізувати твої задуми.</p>
         <textarea id="textInput" rows="4" placeholder="Введіть опис сайту або функціоналу..."></textarea>
         <button onclick="analyzeText()">Аналізувати текст</button>
