--- a/second_page.html
+++ b/second_page.html
@@ -144,10 +144,10 @@
                 <a class="mobile-menu-link link active" href="./index.html">Головна</a>
             </li>
             <li class="mobile-menu-item">
-                <a class="mobile-menu-link link" href="./portfolio.html">Аналіз за текстом</a>
+                <a class="mobile-menu-link link" href="./second_page.html">Аналіз за текстом</a>
             </li>
             <li class="mobile-menu-item">
-                <a class="mobile-menu-link link" href="">Про нас</a>
+                <a class="mobile-menu-link link" href="./about_us.html">Про нас</a>
             </li>
         </ul>
         <ul class="mobile-contacts list">
