--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="siteanalizator ,width=device-width, initial-scale=1.0" />
+  <meta name="SiteAnalizator" content="siteanalizator ,width=device-width, initial-scale=1.0" />
   <title>Аналіз способу розробки</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
