--- a/about_us.html
+++ b/about_us.html
@@ -13,7 +13,7 @@
     <link href="
           https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="script.js"></script>
 </head>
 
