--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" rel="stylesheet" />
 
   <link rel="stylesheet" href="./css/style.css" />
-  <script src="script.js"></script>
+  <script src="./JS/script.js"></script>
 </head>
 
 <body>
